made some changes to creating new instances of effects
- no longer uses a deprecated api (yay!)
- improved error logging